# claude-osdu

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  version-bump.yml  version-check.yml
plugins/cimpl/: CLAUDE.md
plugins/cimpl/.claude-plugin/: plugin.json
plugins/cimpl/agents/: cimpl.md
plugins/cimpl/skills/health/: SKILL.md
plugins/cimpl/skills/iac/: SKILL.md
plugins/cimpl/skills/setup/: deps.json
plugins/cimpl/tests/unit/: test_validate.py
plugins/osdu/: .mcp.json  CLAUDE.md
plugins/osdu/.claude-plugin/: plugin.json
plugins/osdu/agents/: build-runner.md  osdu.md  qa-analyzer.md  qa-comparator.md  qa-reporter.md  qa-runner.md
plugins/osdu/commands/: clone.md  prime.md  qa.md  ship.md
plugins/osdu/reference/: environments.md  osdu-cli-reference.md
plugins/osdu/skills/acceptance-test/: SKILL.md
plugins/osdu/skills/brain/: SKILL.md
plugins/osdu/skills/briefing/: SKILL.md
plugins/osdu/skills/build-runner/: SKILL.md
plugins/osdu/skills/clone/: SKILL.md  clone.py
plugins/osdu/skills/consolidate/: SKILL.md
plugins/osdu/skills/contribute/: SKILL.md
plugins/osdu/skills/dependency-scan/: SKILL.md
plugins/osdu/skills/fossa/: SKILL.md
plugins/osdu/skills/glab/: SKILL.md
plugins/osdu/skills/learn/: SKILL.md
plugins/osdu/skills/maintainer/: SKILL.md
plugins/osdu/skills/maven/: SKILL.md
plugins/spi/: CHANGELOG.md  CLAUDE.md
plugins/spi/.claude-plugin/: plugin.json
plugins/spi/agents/: spi.md
scripts/: version.sh
(+154 files in other folders)
