[project]
name = "claude-osdu"
version = "0.1.0"
description = "Claude Code plugins for OSDU platform operations and infrastructure automation"
readme = "README.md"
authors = [
    { name = "Daniel Scholl", email = "daniel.scholl@microsoft.com" }
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
